test/classes/errors/nilability-init-field-arg/init-field-arg-nonnil-owned-from-oknil-shared.good
init-field-arg-nonnil-owned-from-oknil-shared.chpl:9: In initializer:
init-field-arg-nonnil-owned-from-oknil-shared.chpl:10: error: invalid copy-initialization
init-field-arg-nonnil-owned-from-oknil-shared.chpl:10: error: cannot initialize 'owned MyClass' from a 'shared MyClass?'
  init-field-arg-nonnil-owned-from-oknil-shared.chpl:14: called as MyRecord.init(rhs: shared MyClass?)
